[package]
name = "cndrv"
description = "Safe Cambricon driver API."
version = "0.1.3"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/cndrv.git"
documentation = "https://docs.rs/cndrv"
license = "MIT"
readme = "README.md"
keywords = ["cambricon", "mlu", "neuware", "cndrv", "cnrtc"]
categories = ["hardware-support"]

[dependencies]
context-spore = "0.0"
log = "0.4"

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
search-neuware-tools = { version = "0.0", path = "../search-neuware-tools" }
