[package]
name = "search-neuware-tools"
description = "Crate for searching Neuware tools"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/cndrv.git"
documentation = "https://docs.rs/search-neuware-tools"
license = "MIT"
readme = "README.md"
keywords = ["cambricon", "neuware", "build-script"]
categories = ["development-tools::build-utils"]
